<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TurnosAndroid</string>
    <string name="day_view_new_event_hint">+ Nuevo evento</string>
    <string name="new_event_dialog_label">"Nuevo evento"</string>
    <string name="new_event_dialog_option">"Nuevo evento"</string>
    <string name="drawer_open">Abrir panel de navegación</string>
    <string name="drawer_close">Cerrar panel de navegación</string>
    <string name="drawer_title">Elige una opción</string>
    <string name="today_button">Hoy</string>
    <string name="create_event_button">Nuevo turno</string>
    <string name="create_pattern_button">Nuevo patrón</string>
    <string name="set_event_name">Nombre</string>
    <string name="set_event_description">Descripción</string>
    <string name="set_event_start_time">Comienzo</string>
    <string name="set_event_duration">Duración</string>
    <string name="set_event_location">Dónde</string>
    <string name="set_event_color">Color</string>
    <array name="drawer_elements">
        <item>Calendario</item>
        <item>Mis eventos</item>
        <item>Mis patrones</item>
        <item>Estadísticas</item>
    </array>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_event_dialog_title">Editar este turno</string>
    <string name="new_event_dialog_title">Crear un nuevo turno</string>
    <string name="save_event_error_message">Por favor, introduzca un nombre para el turno</string>
</resources>