<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/set_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/set_event_name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/set_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/set_event_description"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/set_event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/set_event_start_time"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/set_event_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/set_event_duration"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/set_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/set_event_location"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/set_event_color_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_event_color"
            android:textSize="16sp" />

        <View
            android:id="@+id/set_event_button_color"
            android:layout_width="@dimen/round_shape_width_small"
            android:layout_height="@dimen/round_shape_height_small"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/set_event_color_textview"
            android:background="@drawable/round_shape" />

    </RelativeLayout>

</LinearLayout>